# sodoku

./: CMakeLists.txt  Makefile  cmake.sh  cmake_install.cmake
cmake/: GoogleTest.cmake
src/: main.cpp
src/main/board/: board.cpp  board.hpp  check.cpp  check.hpp  generators.hpp  genetic.hpp  genetic_sodoku.hpp  random.hpp
src/test/: board.cpp
